deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopus-underwater-app 
spec:
  selector:
    matchLabels:
        app.kubernetes.io/name: octopus-underwater-app
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octopus-underwater-app
    spec:
      containers:
        - name: octopus-underwater-app
          image: 397188165174.dkr.ecr.us-west-1.amazonaws.com/octopus-underwater-app:latest
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: Always
