service.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopus-service-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: underwater-app-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
